[gd_scene load_steps=29 format=3 uid="uid://bmafffcarojsq"]

[ext_resource type="Script" uid="uid://3mf7yjlpxu08" path="res://Scripts/print.gd" id="1_t1psh"]
[ext_resource type="Texture2D" uid="uid://c1a07canohjxf" path="res://Assets/Anderes/Sub-Found.png" id="1_v27ud"]
[ext_resource type="Script" uid="uid://b5p2v4fw0qjq7" path="res://Scripts/map.gd" id="2_pmsod"]
[ext_resource type="Texture2D" uid="uid://buwbh0dqq4xxx" path="res://Assets/Anderes/found.png" id="4_junip"]
[ext_resource type="Script" uid="uid://c122w7d4xisi5" path="res://Scripts/Menus/camera.gd" id="4_shos3"]
[ext_resource type="Theme" uid="uid://dj32msjjeg33q" path="res://Assets/Anderes/Theme.tres" id="4_yi8w6"]
[ext_resource type="Script" uid="uid://2a54sh44b0ah" path="res://Scripts/Menus/Menu.gd" id="6_g75uk"]
[ext_resource type="Script" uid="uid://i37v8cbml1h1" path="res://Scripts/Menus/con_menu.gd" id="8_eao22"]
[ext_resource type="Script" uid="uid://bhvvdqk0s2vwp" path="res://Scripts/Menus/pause_menu.gd" id="8_r72kp"]
[ext_resource type="PackedScene" uid="uid://bxnhbjarxmvbb" path="res://Scenes/selection.tscn" id="9_72i4s"]
[ext_resource type="Script" uid="uid://ms3di4pk630c" path="res://Scripts/Menus/save_manager.gd" id="12_me6xb"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_h4i4w"]
texture = ExtResource("1_v27ud")
texture_region_size = Vector2i(34, 34)
use_texture_padding = false
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_kjn6e"]
tile_size = Vector2i(34, 34)
sources/1 = SubResource("TileSetAtlasSource_h4i4w")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kkly7"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="InputEventKey" id="InputEventKey_hlk7m"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_rxux2"]
events = [SubResource("InputEventKey_hlk7m")]

[sub_resource type="InputEventKey" id="InputEventKey_xwaj0"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_p6qyl"]
events = [SubResource("InputEventKey_xwaj0")]

[sub_resource type="InputEventKey" id="InputEventKey_qslbn"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_1vblq"]
events = [SubResource("InputEventKey_qslbn")]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_io277"]
bg_color = Color(0.0784314, 0.0784314, 0.0784314, 0.8)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_junip"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_erva7"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Animation" id="Animation_junip"]
resource_name = "Color_change"
length = 3.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.9, 1.96667, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 0, 0, 0.458824), Color(1, 0, 0, 0.286275), Color(1, 0, 0, 0.458824), Color(1, 0, 0, 0.286275)]
}

[sub_resource type="Animation" id="Animation_me6xb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_i0vk8"]
resource_name = "fade_in"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 0), Color(1, 0, 0, 0.458824)]
}

[sub_resource type="Animation" id="Animation_iykep"]
resource_name = "fade_out"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 0.458824), Color(1, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i0vk8"]
_data = {
&"Color_change": SubResource("Animation_junip"),
&"RESET": SubResource("Animation_me6xb"),
&"fade_in": SubResource("Animation_i0vk8"),
&"fade_out": SubResource("Animation_iykep")
}

[node name="Print" type="Node2D"]
script = ExtResource("1_t1psh")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
z_index = -1
tile_set = SubResource("TileSet_kjn6e")
script = ExtResource("2_pmsod")

[node name="found_div" type="TextureRect" parent="TileMapLayer"]
visible = false
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("4_junip")
stretch_mode = 1

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("4_shos3")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LabelDings" type="PanelContainer" parent="CanvasLayer"]
visible = false
offset_top = 411.0
offset_right = 113.0
offset_bottom = 443.0
theme = ExtResource("4_yi8w6")

[node name="Menu Name" type="Label" parent="CanvasLayer/LabelDings"]
layout_mode = 2
theme = ExtResource("4_yi8w6")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_kkly7")
text = "Main Menu"

[node name="Container" type="PanelContainer" parent="CanvasLayer"]
visible = false
offset_right = 163.0
offset_bottom = 411.0
theme = ExtResource("4_yi8w6")
script = ExtResource("6_g75uk")

[node name="Main" type="GridContainer" parent="CanvasLayer/Container"]
layout_mode = 2

[node name="Back_men" type="Button" parent="CanvasLayer/Container/Main"]
layout_mode = 2
size_flags_horizontal = 3
shortcut = SubResource("Shortcut_rxux2")
shortcut_in_tooltip = false
text = "Back"

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/Container/Main"]
layout_mode = 2

[node name="Production" type="Button" parent="CanvasLayer/Container/Main"]
layout_mode = 2
size_flags_horizontal = 3
text = "Production"

[node name="Logistic" type="Button" parent="CanvasLayer/Container/Main"]
layout_mode = 2
size_flags_horizontal = 3
text = "Logistic"

[node name="Text" type="Button" parent="CanvasLayer/Container/Main"]
layout_mode = 2
size_flags_horizontal = 3
text = "Text"

[node name="Color_mode" type="Button" parent="CanvasLayer/Container/Main"]
layout_mode = 2
text = "Color Mode"

[node name="Production" type="GridContainer" parent="CanvasLayer/Container"]
visible = false
layout_mode = 2

[node name="Back" type="Button" parent="CanvasLayer/Container/Production"]
layout_mode = 2
size_flags_horizontal = 3
shortcut = SubResource("Shortcut_p6qyl")
shortcut_in_tooltip = false
text = "Back"

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/Container/Production"]
layout_mode = 2

[node name="Constructor" type="Button" parent="CanvasLayer/Container/Production"]
layout_mode = 2
size_flags_horizontal = 3
text = "Constructor"

[node name="Smelter" type="Button" parent="CanvasLayer/Container/Production"]
layout_mode = 2
size_flags_horizontal = 3
text = "Smelter"

[node name="Foundry" type="Button" parent="CanvasLayer/Container/Production"]
layout_mode = 2
size_flags_horizontal = 3
text = "Foundry"

[node name="Logistic" type="GridContainer" parent="CanvasLayer/Container"]
visible = false
layout_mode = 2

[node name="Back_log" type="Button" parent="CanvasLayer/Container/Logistic"]
layout_mode = 2
size_flags_horizontal = 3
shortcut = SubResource("Shortcut_1vblq")
shortcut_in_tooltip = false
text = "Back"

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/Container/Logistic"]
layout_mode = 2

[node name="Belt" type="Button" parent="CanvasLayer/Container/Logistic"]
layout_mode = 2
size_flags_horizontal = 3
text = "Belt"

[node name="Pipe" type="Button" parent="CanvasLayer/Container/Logistic"]
layout_mode = 2
size_flags_horizontal = 3
text = "Pipe"

[node name="Splitter" type="Button" parent="CanvasLayer/Container/Logistic"]
layout_mode = 2
size_flags_horizontal = 3
text = "Splitter"

[node name="Color" type="GridContainer" parent="CanvasLayer/Container"]
visible = false
layout_mode = 2

[node name="Back_col" type="Button" parent="CanvasLayer/Container/Color"]
layout_mode = 2
size_flags_horizontal = 3
text = "Back"

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/Container/Color"]
layout_mode = 2

[node name="ColorPickerButton" type="ColorPickerButton" parent="CanvasLayer/Container/Color"]
layout_mode = 2
theme = ExtResource("4_yi8w6")
text = "

"
color = Color(1, 1, 1, 1)

[node name="Menu" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = -483.0
offset_bottom = -292.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_yi8w6")
shortcut_in_tooltip = false
text = "Menu"

[node name="Ediors" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextEditor" type="Panel" parent="CanvasLayer/Ediors"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -151.0
offset_top = -95.0
offset_right = 151.0
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_yi8w6")

[node name="Text Edit" type="TextEdit" parent="CanvasLayer/Ediors/TextEditor"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -146.0
offset_top = -90.5
offset_right = 146.0
offset_bottom = 90.5
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Edit Text"

[node name="Finsh_text" type="Button" parent="CanvasLayer/Ediors/TextEditor"]
layout_mode = 0
offset_top = 197.0
offset_right = 80.0
offset_bottom = 229.0
text = "Finish"

[node name="ColorEdit" type="Panel" parent="CanvasLayer/Ediors"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -151.0
offset_top = -165.0
offset_right = 151.0
offset_bottom = 165.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_yi8w6")

[node name="ColorPicker" type="ColorPicker" parent="CanvasLayer/Ediors/ColorEdit"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -149.0
offset_top = -162.0
offset_right = 149.0
offset_bottom = 162.0
grow_horizontal = 2
grow_vertical = 2
edit_alpha = false
color_modes_visible = false
sliders_visible = false
presets_visible = false

[node name="Finsh_color" type="Button" parent="CanvasLayer/Ediors/ColorEdit"]
layout_mode = 0
offset_left = 2.0
offset_top = 333.0
offset_right = 82.0
offset_bottom = 365.0
text = "Finish"

[node name="Labels" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 982.0
offset_right = 982.0
metadata/_edit_use_anchors_ = true

[node name="fps" type="Label" parent="CanvasLayer/Labels"]
modulate = Color(1, 0, 0, 1)
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "FPS"
metadata/_edit_use_anchors_ = true

[node name="Coords" type="Label" parent="CanvasLayer/Labels"]
layout_mode = 0
offset_top = 62.0
offset_right = 55.0
offset_bottom = 85.0
text = "Coords"
metadata/_edit_use_anchors_ = true

[node name="name" type="Label" parent="CanvasLayer/Labels"]
layout_mode = 0
offset_top = 23.0
offset_right = 40.0
offset_bottom = 46.0
text = "Name"
metadata/_edit_use_anchors_ = true

[node name="Pause_menu" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_r72kp")

[node name="Background" type="Panel" parent="CanvasLayer/Pause_menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_yi8w6")

[node name="Box" type="Panel" parent="CanvasLayer/Pause_menu/Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.0
offset_top = -101.0
offset_right = 145.0
offset_bottom = 111.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_io277")

[node name="Continue" type="Button" parent="CanvasLayer/Pause_menu/Background/Box"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.5
offset_top = -88.0
offset_right = 54.5
offset_bottom = -56.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_yi8w6")
text = "Continue"

[node name="Save" type="Button" parent="CanvasLayer/Pause_menu/Background/Box"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -137.5
offset_top = 65.0
offset_right = -19.5
offset_bottom = 97.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_yi8w6")
text = "Save"

[node name="load" type="Button" parent="CanvasLayer/Pause_menu/Background/Box"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 15.5
offset_top = 65.0
offset_right = 133.5
offset_bottom = 97.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_yi8w6")
text = "Load"

[node name="options" type="Button" parent="CanvasLayer/Pause_menu/Background/Box"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.5
offset_top = -40.0
offset_right = 54.5
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_yi8w6")
text = "Options"

[node name="Exit" type="Button" parent="CanvasLayer/Pause_menu/Background/Box"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.5
offset_top = 9.0
offset_right = 54.5
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_yi8w6")
text = "Exit"

[node name="Notes" type="TextEdit" parent="CanvasLayer/Pause_menu/Background/Box"]
layout_mode = 0
offset_left = 349.0
offset_top = 4.0
offset_right = 625.0
offset_bottom = 198.0
theme = ExtResource("4_yi8w6")
placeholder_text = "Notes..."

[node name="TabBar" type="TabBar" parent="CanvasLayer/Pause_menu/Background"]
visible = false
layout_mode = 0
offset_left = 248.0
offset_top = 29.0
offset_right = 904.0
offset_bottom = 69.0
current_tab = 0
tab_alignment = 1
deselect_enabled = true
tab_count = 2
tab_0/title = "Input"
tab_1/title = "fdgbgfdg"

[node name="Finish" type="Button" parent="CanvasLayer/Pause_menu/Background/TabBar"]
layout_mode = 0
offset_top = 495.0
offset_right = 85.0
offset_bottom = 527.0
text = "Finish"

[node name="Cancel" type="Button" parent="CanvasLayer/Pause_menu/Background/TabBar"]
layout_mode = 0
offset_left = 110.0
offset_top = 495.0
offset_right = 203.0
offset_bottom = 527.0
text = "Cancel"

[node name="input_opt" type="Panel" parent="CanvasLayer/Pause_menu/Background"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 248.0
offset_top = 72.0
offset_right = -248.0
offset_bottom = -135.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_yi8w6")

[node name="Constructor" type="Label" parent="CanvasLayer/Pause_menu/Background/input_opt"]
layout_mode = 0
offset_left = 195.0
offset_top = 48.0
offset_right = 311.0
offset_bottom = 76.0
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_junip")
text = "Constructor"
horizontal_alignment = 1

[node name="Const_input" type="Label" parent="CanvasLayer/Pause_menu/Background/input_opt"]
layout_mode = 0
offset_left = 382.0
offset_top = 48.0
offset_right = 450.562
offset_bottom = 79.0
theme_override_styles/normal = SubResource("StyleBoxFlat_erva7")
text = "c"
horizontal_alignment = 1

[node name="Smelter" type="Label" parent="CanvasLayer/Pause_menu/Background/input_opt"]
layout_mode = 0
offset_left = 195.0
offset_top = 100.0
offset_right = 311.0
offset_bottom = 128.0
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_junip")
text = "Smelter"
horizontal_alignment = 1

[node name="Smelter_input" type="Label" parent="CanvasLayer/Pause_menu/Background/input_opt"]
layout_mode = 0
offset_left = 382.0
offset_top = 100.0
offset_right = 450.562
offset_bottom = 131.0
theme_override_styles/normal = SubResource("StyleBoxFlat_erva7")
text = "s"
horizontal_alignment = 1

[node name="andere_opt" type="Panel" parent="CanvasLayer/Pause_menu/Background"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 248.0
offset_top = 70.0
offset_right = -248.0
offset_bottom = -135.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_yi8w6")

[node name="del_ramen" type="ColorRect" parent="CanvasLayer"]
visible = false
offset_right = 1152.0
offset_bottom = 648.0
mouse_filter = 2

[node name="Animation_delete" type="AnimationPlayer" parent="CanvasLayer/del_ramen"]
libraries = {
&"": SubResource("AnimationLibrary_i0vk8")
}

[node name="Timer" type="Timer" parent="CanvasLayer/del_ramen"]
wait_time = 0.3
one_shot = true

[node name="Con_menu" type="PanelContainer" parent="."]
visible = false
z_index = 2
offset_right = 162.0
offset_bottom = 118.0
theme = ExtResource("4_yi8w6")
script = ExtResource("8_eao22")

[node name="GridContainer" type="GridContainer" parent="Con_menu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Text" type="Button" parent="Con_menu/GridContainer"]
layout_mode = 2
text = "Add Text"

[node name="Change Text" type="Button" parent="Con_menu/GridContainer"]
layout_mode = 2
text = "Change Text"

[node name="Color" type="Button" parent="Con_menu/GridContainer"]
layout_mode = 2
text = "Change Color"

[node name="Selection" parent="." instance=ExtResource("9_72i4s")]

[node name="save_manager" type="Node" parent="."]
script = ExtResource("12_me6xb")

[connection signal="pressed" from="CanvasLayer/Container/Main/Back_men" to="CanvasLayer/Container" method="_on_back_men_pressed"]
[connection signal="pressed" from="CanvasLayer/Container/Main/Production" to="CanvasLayer/Container" method="_on_production_pressed"]
[connection signal="pressed" from="CanvasLayer/Container/Main/Logistic" to="CanvasLayer/Container" method="_on_logistic_pressed"]
[connection signal="pressed" from="CanvasLayer/Container/Main/Text" to="." method="_on_text_pressed"]
[connection signal="pressed" from="CanvasLayer/Container/Main/Color_mode" to="CanvasLayer/Container" method="_on_color_mode_pressed"]
[connection signal="pressed" from="CanvasLayer/Container/Production/Back" to="CanvasLayer/Container" method="_on_back_pressed"]
[connection signal="pressed" from="CanvasLayer/Container/Production/Constructor" to="." method="_on_constructor_pressed"]
[connection signal="pressed" from="CanvasLayer/Container/Production/Smelter" to="." method="_on_smelter_pressed"]
[connection signal="pressed" from="CanvasLayer/Container/Production/Foundry" to="." method="_on_foundry_pressed"]
[connection signal="pressed" from="CanvasLayer/Container/Logistic/Back_log" to="CanvasLayer/Container" method="_on_back_log_pressed"]
[connection signal="pressed" from="CanvasLayer/Container/Logistic/Belt" to="." method="_on_belt_pressed"]
[connection signal="pressed" from="CanvasLayer/Container/Logistic/Pipe" to="." method="_on_pipe_pressed"]
[connection signal="pressed" from="CanvasLayer/Container/Logistic/Splitter" to="." method="_on_splitter_pressed"]
[connection signal="pressed" from="CanvasLayer/Container/Color/Back_col" to="CanvasLayer/Container" method="_on_back_col_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu" to="CanvasLayer/Container" method="_on_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/Ediors/TextEditor/Finsh_text" to="Con_menu" method="_on_finsh_text_pressed"]
[connection signal="pressed" from="CanvasLayer/Ediors/ColorEdit/Finsh_color" to="Con_menu" method="_on_finsh_color_pressed"]
[connection signal="pressed" from="CanvasLayer/Pause_menu/Background/Box/Continue" to="CanvasLayer/Pause_menu" method="_on_continue_pressed"]
[connection signal="pressed" from="CanvasLayer/Pause_menu/Background/Box/options" to="CanvasLayer/Pause_menu" method="_on_options_pressed"]
[connection signal="pressed" from="CanvasLayer/Pause_menu/Background/Box/Exit" to="CanvasLayer/Pause_menu" method="_on_exit_pressed"]
[connection signal="tab_changed" from="CanvasLayer/Pause_menu/Background/TabBar" to="CanvasLayer/Pause_menu" method="_on_tab_bar_tab_changed"]
[connection signal="pressed" from="CanvasLayer/Pause_menu/Background/TabBar/Finish" to="CanvasLayer/Pause_menu" method="_on_finish_pressed"]
[connection signal="pressed" from="CanvasLayer/Pause_menu/Background/TabBar/Cancel" to="CanvasLayer/Pause_menu" method="_on_cancel_pressed"]
[connection signal="timeout" from="CanvasLayer/del_ramen/Timer" to="." method="timer_delete"]
[connection signal="draw" from="Con_menu" to="Con_menu" method="_on_draw"]
[connection signal="mouse_entered" from="Con_menu" to="Con_menu" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Con_menu" to="Con_menu" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Con_menu/GridContainer/Text" to="Con_menu" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Con_menu/GridContainer/Text" to="Con_menu" method="_on_mouse_exited"]
[connection signal="pressed" from="Con_menu/GridContainer/Text" to="Con_menu" method="_on_text_pressed"]
[connection signal="mouse_entered" from="Con_menu/GridContainer/Change Text" to="Con_menu" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Con_menu/GridContainer/Change Text" to="Con_menu" method="_on_mouse_exited"]
[connection signal="pressed" from="Con_menu/GridContainer/Change Text" to="Con_menu" method="_on_change_text_pressed"]
[connection signal="mouse_entered" from="Con_menu/GridContainer/Color" to="Con_menu" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Con_menu/GridContainer/Color" to="Con_menu" method="_on_mouse_exited"]
[connection signal="pressed" from="Con_menu/GridContainer/Color" to="Con_menu" method="_on_color_pressed"]
